--- a/assets/css/_sass/_vars/_colors.scss
+++ b/assets/css/_sass/_vars/_colors.scss
@@ -41,3 +41,14 @@ $mylightgray:    hsla(261, 0%, 87.5%, 1);
 // red-----teal
 // yellow--blue
 // green---magenta
+
+/* HSL */
+$black: hsla(0%, 0%, 0%, 1);
+$champagne-pink: hsla(29%, 62%, 86%, 1);
+$rose-quartz: hsla(278%, 9%, 64%, 1);
+$lavender-mist: hsla(240%, 67%, 94%, 1);
+$independence: hsla(237%, 24%, 36%, 1);
+$tea-rose: hsla(6%, 43%, 82%, 1);
+
+// KEY
+
