Tweaked colors for page 2 and contact links

--- a/assets/css/_sass/_pages/_new-home-2.scss
+++ b/assets/css/_sass/_pages/_new-home-2.scss
@@ -94,7 +94,7 @@
 	justify-content: center;
 	align-items: center;
 //	border: 1px solid red;
-	background-color: $champagne-pink;
+	background-color: $shampoo;
 }
 
 .home-portfolio__title {
@@ -140,7 +140,7 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	background-color: $lavender-mist;
+	background-color: $pastel-purple;
 	@media screen and (min-width: 600px) {
 		height: 50vh;
 	}
@@ -159,7 +159,7 @@
 	justify-content: center;
 	align-items: center;
 	padding: 0 1rem;
-	background-color: $rose-quartz; // $tea-rose;
+	background-color: $mtbatten-pink; // $tea-rose;
 	@media screen and (min-width: 600px) {
 		height: 50vh;
 		padding: 0 2rem;
@@ -183,7 +183,7 @@
 	flex-flow: column nowrap;
 	justify-content: center;
 	align-items: center;
-	background-color: $tea-rose; // $rose-quartz;
+	background-color: $pale-gold; // $rose-quartz;
 	@media screen and (min-width: 600px) {
 		height: 50vh;
 		padding: 0 2rem;
@@ -302,11 +302,11 @@
 	a {
 		font-weight: 400;
 		color: black;
-		border-bottom: 2px solid $mypurple;
+		border-bottom: 2px solid $shampoo;
 		transition: background-color .3s;
 		&:hover, &:focus {
 			color: black;
-			background-color: $mypurple;
+			background-color: $shampoo;
 		}
 	}
 	@media screen and (max-width: 425px) {
