--- a/assets/css/_sass/_vars/_colors.scss
+++ b/assets/css/_sass/_vars/_colors.scss
@@ -52,3 +52,11 @@ $tea-rose: hsla(6%, 43%, 82%, 1);
 
 // KEY
 
+/// break ///
+
+/* HSL */
+$shampoo: hsla(288%, 69%, 90%, 1);
+$mtbatten-pink: hsla(340%, 11%, 57%, 1);
+$pastel-purple: hsla(320%, 17%, 68%, 1);
+$pale-gold: hsla(28%, 59%, 74%, 1);
+$pearly-purple: hsla(319%, 33%, 55%, 1);
