--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,7 +11,7 @@
     <meta name="description" content="description here">
     <meta name="keywords" content="keywords,here"-->
     <link rel="shortcut icon" href="{{ site.baseurl }}/favicon.ico" type="image/x-icon">
-    <link href="https://fonts.googleapis.com/css?family=Oswald:400,400i,600,600i,700,700i|Poppins:400,400i,700,700i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:400,400i,700,700i|Montserrat:400,400i,700,700i,900,900i" rel="stylesheet">
     <link rel="stylesheet" href="https://use.typekit.net/dbo3mmi.css">
     <link rel="stylesheet" href="{{ 'assets/css/style.css' | relative_url }}" type="text/css">
 </head>
