Mess around with colors and fonts on homepage

--- a/assets/css/_sass/_vars/_fonts.scss
+++ b/assets/css/_sass/_vars/_fonts.scss
@@ -3,6 +3,7 @@
 // Google:
 $muli: 'Muli', sans-serif;
 $poppins: 'Poppins', sans-serif;
+$montserrat: 'Montserrat', sans-serif;
 
 // Adobe:
 $paralucent: 'paralucent', sans-serif;
