--- a/assets/css/_sass/_pages/_new-home-2.scss
+++ b/assets/css/_sass/_pages/_new-home-2.scss
@@ -5,7 +5,7 @@
 		color: black;
 		transition: color .2s;
 		&:hover, &:focus {
-			color: purple;
+			color: $isabelline;
 		}
 	}
 }
@@ -15,6 +15,8 @@
 	display: flex;
 	align-content: center;
 	justify-content: center;
+	font-family: $montserrat;
+	font-weight: 900;
 }
 
 .home-1__content-wrapper {
@@ -26,6 +28,7 @@
 	height: 100vh;
 //	width: 100vw;
 	margin: 0;
+
 }
 
 .home-1__text-wrapper {
@@ -34,7 +37,8 @@
 	justify-content: center;
 	align-items: center;
 	padding: 1rem 2rem;
-	border: 4px solid black;
+	background-color: $pale-gold;
+	border: 4px solid $jet;
 	@media screen and (max-width: 500px) {
 		margin: 1rem;
 	}
@@ -44,7 +48,8 @@
 }
 
 .home-1__page-title {
-	font-family: $poppins;
+	font-family: $montserrat;
+	font-weight: 900;
 	border-width: 0;
 	@media screen and (min-width: 768px) {
 		font-size: 4rem;
@@ -52,7 +57,8 @@
 }
 
 .home-1__subtitle {
-	font-family: $poppins;
+	font-family: $montserrat;
+	font-weight: 900;
 	text-transform: uppercase;
 	@media screen and (min-width: 768px) {
 		font-size: 3rem;
@@ -66,12 +72,26 @@
 	grid-template-areas: 'portfolio'
 						 'blog';
 	min-height: 100vh;
+	font-family: $montserrat;
+	font-weight: 900;
 	color: $jet;
+	border: 4px solid $jet;
 	h2 {
-		font-size: 3rem;	
+		font-size: 3rem;
+		font-weight: 900;	
 	}
 	h3 {
 		font-size: 2.25rem;
+		font-family: $montserrat;
+		font-weight: 900;
+		a {
+			font-weight: 900;
+		}
+	}
+	h4 {
+		font-family: $montserrat;
+		font-weight: 400;
+		font-style: italic;
 	}
 	
 	text-transform: uppercase;
@@ -93,11 +113,18 @@
 	flex-flow: column nowrap;
 	justify-content: center;
 	align-items: center;
-//	border: 1px solid red;
+	font-family: $montserrat;
+	font-weight: 900;
+	border-right: 4px solid $jet;
+	a {
+		font-weight: 900;
+	}
 	background-color: $shampoo;
 }
 
 .home-portfolio__title {
+	font-family: $montserrat;
+	font-weight: 900;
 	a {
 		color: black;
 		padding: 1rem;
@@ -120,8 +147,11 @@
 						 'politics'
 						 'tech';
 	justify-content: center;
-//	align-items: center;
-//	border: 1px solid red;
+	font-family: $montserrat;
+	font-weight: 900;
+	a {
+		font-weight: 900;
+	}
 	@media screen and (min-width: 600px) {
 		display: grid;
 		grid-template-columns: 1fr 1fr;
@@ -160,6 +190,8 @@
 	align-items: center;
 	padding: 0 1rem;
 	background-color: $mtbatten-pink; // $tea-rose;
+	border-left: 4px solid $jet;
+	border-top: 4px solid $jet;
 	@media screen and (min-width: 600px) {
 		height: 50vh;
 		padding: 0 2rem;
@@ -184,6 +216,7 @@
 	justify-content: center;
 	align-items: center;
 	background-color: $pale-gold; // $rose-quartz;
+	border-top: 4px solid $jet;
 	@media screen and (min-width: 600px) {
 		height: 50vh;
 		padding: 0 2rem;
@@ -238,7 +271,8 @@
 	width: 83.33%;
 	margin: 0 auto;
 	margin-bottom: 1.5rem;
-	font-family: $poppins;
+	font-family: $montserrat;
+	font-weight: 900;
 	@media screen and (max-width: 425px) {
 		width: 91.67%;
 	}
@@ -249,7 +283,9 @@
 
 .home-contact__title {
 // covered above
-	font-family: $poppins;
+	font-family: $montserrat;
+	font-weight: 900;
+	text-transform: uppercase;
 }
 
 .home-contact__content {
@@ -281,7 +317,7 @@
 
 .home-contact__type {
 	width: 5.5rem;
-	font-family: $poppins;
+	font-family: $montserrat;;
 	font-size: 20px;
 	font-weight: bold;
 	line-height: 1.4;
@@ -296,7 +332,7 @@
 }
 
 .home-contact__user {
-	font-family: $poppins;
+	font-family: $montserrat;
 	font-size: 20px;
 	line-height: 1.4;
 	a {
