--- a/assets/css/_sass/_vars/_colors.scss
+++ b/assets/css/_sass/_vars/_colors.scss
@@ -60,3 +60,11 @@ $mtbatten-pink: hsla(340%, 11%, 57%, 1);
 $pastel-purple: hsla(320%, 17%, 68%, 1);
 $pale-gold: hsla(28%, 59%, 74%, 1);
 $pearly-purple: hsla(319%, 33%, 55%, 1);
+
+/// break ///
+
+// coordinates with 'Personal Website 2' on iPad
+$mylavender: hsla(248, 94.7%, 85.3%, 1); // 'portfolio'
+$khaki: 	 hsla(37, 80.3%, 88%, 1); // blog
+$fuchsia: 	 hsla(300, 78.2%, 53.1%, 1); // tech
+$robinsegg:  hsla(204, 95.5%, 82.7%, 1); // politics
