--- a/assets/css/_sass/_pages/_new-home-2.scss
+++ b/assets/css/_sass/_pages/_new-home-2.scss
@@ -40,8 +40,12 @@
 	justify-content: center;
 	align-items: center;
 	padding: 1rem 2rem;
-	background-color: $pale-gold;
-	border: 4px solid $jet;
+//	background-color: $pale-gold;
+	border: 4px solid black;
+//	border-left: 4px solid $mylavender;
+//	border-top: 4px solid $khaki;
+//	border-right: 4px solid $fuchsia;
+//	border-bottom: 4px solid $robinsegg;
 	@media screen and (max-width: 500px) {
 		margin: 1rem;
 	}
@@ -285,13 +289,22 @@
 
 .home-contact__title {
 // covered above
-	font-family: $montserrat;
+	font-size: 3rem;
 	font-weight: 900;
 	text-transform: uppercase;
+	text-align: center;
+	@media screen and (min-width: 768px) {
+		font-size: 4rem;
+	}
 }
 
 .home-contact__content {
-
+	display: flex;
+	flex-flow: column nowrap;
+	justify-content: center;
+	align-items: center;
+	padding: 2rem;
+	border: 4px solid black;
 }
 
 // ul
@@ -340,11 +353,11 @@
 	a {
 		font-weight: 400;
 		color: black;
-		border-bottom: 2px solid $shampoo;
+		border-bottom: 2px solid $mylavender;
 		transition: background-color .3s;
 		&:hover, &:focus {
 			color: black;
-			background-color: $shampoo;
+			background-color: $mylavender;
 		}
 	}
 	@media screen and (max-width: 425px) {
