--- a/assets/css/_sass/_pages/_new-home-2.scss
+++ b/assets/css/_sass/_pages/_new-home-2.scss
@@ -300,11 +300,15 @@
 
 .home-contact__content {
 	display: flex;
-	flex-flow: column nowrap;
+//	flex-flow: column nowrap;
 	justify-content: center;
-	align-items: center;
+//	align-items: center;
 	padding: 2rem;
 	border: 4px solid black;
+}
+
+.home-contact__flex-wrapper {
+
 }
 
 // ul
