--- a/assets/css/_sass/_pages/_new-home-2.scss
+++ b/assets/css/_sass/_pages/_new-home-2.scss
@@ -336,7 +336,7 @@
 
 .home-contact__type {
 	width: 5.5rem;
-	font-family: $montserrat;;
+	font-family: $montserrat;
 	font-size: 20px;
 	font-weight: bold;
 	line-height: 1.4;
