--- a/assets/css/_sass/_nav/_new-footer.scss
+++ b/assets/css/_sass/_nav/_new-footer.scss
@@ -7,18 +7,25 @@
 	min-height: 40vh;
 	width: 100%;
 	padding: 1.5em;
-
 	background-color: black;
 }
 
 // ul
 .new-footer__content-wrapper {
+	display: flex;
+	flex-flow: column nowrap;
+	align-items: center;
 	width: calc(100% - 1.5em);
 	padding: 1em 0;
 	padding-left: 1em;
-	border-top: 2px solid $mylavender;
-	border-bottom: 2px solid $mylavender;
+	border: 4px solid $mylavender;
 	list-style-type: none;
+}
+
+.new-footer__link-wrapper {
+	display: flex;
+	padding: 2rem 0;
+	
 }
 
 [class*="new-footer__link"] {
@@ -29,7 +36,7 @@
 	line-height: 1.4;
 	a {
 		border-bottom-width: 0px;
-		transition: color .3s background-color .3s;
+		transition: color .3s, background-color .3s;
 	}
 	@media screen and (min-width: 1440px) {
 		font-size: 24px; // 1.5rem
@@ -37,22 +44,31 @@
 }
 
 .new-footer__link--name {
+	font-family: $acier-bat-gris; // $futura-bold;
+	font-size: 2rem;
+	font-weight: 400;
+	margin: 0;
+	padding: 1rem 0;
+	text-transform: uppercase;
+	border-bottom: 2px solid $mylavender;
 	a {
-		color: $mylavender;
+		font-weight: 400;
+		color: white; // $mylavender;
 		&:hover, &:focus {
 			color: black;
-			background-color: $mylavender;
+			background-color: white; // $mylavender;
 		}
 
 	}
 }
 
 .new-footer__link {
+	padding: 0 1rem;
 	a {
-		color: white;
+		color: $mylavender;
 		&:hover, &:focus {
 			color: black;
-			background-color: white;
+			background-color: $mylavender;
 		}
 	}
 }
