--- a/assets/css/_sass/_pages/_new-home-2.scss
+++ b/assets/css/_sass/_pages/_new-home-2.scss
@@ -10,6 +10,7 @@
 	}
 	h2 {
 		font-family: $acier-bat-gris;
+		font-weight: 400;
 	}
 }
 
@@ -19,7 +20,7 @@
 	align-content: center;
 	justify-content: center;
 	font-family: $acier-bat-gris;
-//	font-weight: 900;
+	font-weight: 400;
 }
 
 .home-1__content-wrapper {
@@ -55,8 +56,8 @@
 }
 
 .home-1__page-title {
-	font-family: $futura;
-	font-weight: 900;
+	font-family: $acier-bat-gris;
+	font-weight: 400;
 	border-width: 0;
 	@media screen and (min-width: 768px) {
 		font-size: 4rem;
@@ -79,20 +80,23 @@
 	grid-template-areas: 'portfolio'
 						 'blog';
 	min-height: 100vh;
-	font-family: $montserrat;
-	font-weight: 900;
+	font-family: $acier-bat-gris;
+	font-weight: 400;
 	color: $jet;
 	border: 4px solid $jet;
 	h2 {
-		font-size: 3rem;
-		font-weight: 900;	
+		font-size: 3rem;	
+		font-weight: 400;
+		a {
+			font-weight: 400;
+		}
 	}
 	h3 {
 		font-size: 2.25rem;
 		font-family: $acier-bat-gris; // $futura-bold;
-		font-weight: 900;
+		font-weight: 400;
 		a {
-			font-weight: 900;
+			font-weight: 400;
 		}
 	}
 	h4 {
@@ -109,7 +113,7 @@
 			font-size: 4rem;	
 		}
 		h3 {
-			font-size: 2.25rem;
+			font-size: 2.5rem;
 		}
 	}
 }
