--- a/assets/css/_sass/_pages/_new-home-2.scss
+++ b/assets/css/_sass/_pages/_new-home-2.scss
@@ -12,6 +12,7 @@
 		font-family: $acier-bat-gris;
 		font-weight: 400;
 	}
+	max-width: 100vw;
 }
 
 .home__page-1 {
@@ -29,8 +30,7 @@
 	flex-flow: column nowrap;
 	justify-content: center;
 	align-items: center;
-	height: 100vh;
-//	width: 100vw;
+	height: calc(100vh - 64px);
 	margin: 0;
 
 }
@@ -40,13 +40,9 @@
 	flex-flow: column nowrap;
 	justify-content: center;
 	align-items: center;
-	padding: 1rem 2rem;
-//	background-color: $pale-gold;
-	border: 4px solid black;
-//	border-left: 4px solid $mylavender;
-//	border-top: 4px solid $khaki;
-//	border-right: 4px solid $fuchsia;
-//	border-bottom: 4px solid $robinsegg;
+	padding: 2rem 3rem;
+	border-top: 4px solid black;
+	border-bottom: 4px solid black;
 	@media screen and (max-width: 500px) {
 		margin: 1rem;
 	}
@@ -56,18 +52,25 @@
 }
 
 .home-1__page-title {
+	font-size: 3rem;
 	font-family: $acier-bat-gris;
 	font-weight: 400;
 	border-width: 0;
+	@media screen and (min-width: 600px) {
+		font-size: 3rem;
+	}
 	@media screen and (min-width: 768px) {
 		font-size: 4rem;
 	}
 }
 
 .home-1__subtitle {
-	font-family: $montserrat;
-	font-weight: 900;
-	text-transform: uppercase;
+	font-size: 2rem;
+	align-self: flex-start;
+	margin: 0;
+	@media screen and (min-width: 600px) {
+		font-size: 2.5rem;
+	}
 	@media screen and (min-width: 768px) {
 		font-size: 3rem;
 	}
