--- a/assets/css/_sass/_pages/_new-home-2.scss
+++ b/assets/css/_sass/_pages/_new-home-2.scss
@@ -61,6 +61,9 @@
 	}
 	@media screen and (min-width: 768px) {
 		font-size: 4rem;
+		span {
+			display: none;
+		}
 	}
 }
 
@@ -73,6 +76,9 @@
 	}
 	@media screen and (min-width: 768px) {
 		font-size: 3rem;
+		span {
+			display: none;
+		}
 	}
 }
 
