--- a/assets/css/_sass/_pages/_new-home-2.scss
+++ b/assets/css/_sass/_pages/_new-home-2.scss
@@ -52,6 +52,7 @@
 }
 
 .home-1__page-title {
+	align-self: flex-start;
 	font-size: 3rem;
 	font-family: $acier-bat-gris;
 	font-weight: 400;
@@ -68,8 +69,8 @@
 }
 
 .home-1__subtitle {
-	font-size: 2rem;
 	align-self: flex-start;
+	font-size: 2rem;
 	margin: 0;
 	@media screen and (min-width: 600px) {
 		font-size: 2.5rem;
