--- a/assets/css/_sass/_vars/_colors.scss
+++ b/assets/css/_sass/_vars/_colors.scss
@@ -47,4 +47,4 @@ $mylavender:   hsla(248, 94.7%, 85.3%, 1); // 'portfolio'
 $khaki: 	   hsla(37, 80.3%, 88%, 1); // blog
 $fuchsia: 	   hsla(300, 78.2%, 53.1%, 1); // tech
 $robinsegg:    hsla(204, 95.5%, 82.7%, 1); // politics
-$medbluegreen: hsla(169, 62%, 72%, 1);;
+$midbluegreen: hsla(169, 62%, 72%, 1); // intake
