Finish up mobile size of footer

--- a/assets/css/_sass/_pages/_new-home-2.scss
+++ b/assets/css/_sass/_pages/_new-home-2.scss
@@ -5,12 +5,19 @@
 		color: black;
 		transition: color .2s;
 		&:hover, &:focus {
-			color: $isabelline;
+		//	color: $isabelline;
+			border-bottom: 0 solid black;
 		}
 	}
-	h2 {
+	h2, h3 {
 		font-family: $acier-bat-gris;
 		font-weight: 400;
+		transition: font-weight .3s;
+		a {
+			&:hover, &:focus {
+				font-family: $acier-bat-solid;
+			}
+		}
 	}
 	max-width: 100vw;
 }
