--- a/assets/css/_sass/_vars/_fonts.scss
+++ b/assets/css/_sass/_vars/_fonts.scss
@@ -4,8 +4,9 @@
 $poppins: 'Poppins', sans-serif;
 $montserrat: 'Montserrat', sans-serif;
 
-// Adobe:]
+// Adobe:
 $source-sans: source-sans-pro, sans-serif;
 $futura: futura-pt, sans-serif;
 $futura-bold: futura-pt-bold, sans-serif;
 $acier-bat-gris: acier-bat-gris, sans-serif;
+$acier-bat-solid: acier-bat-solid, sans-serif;;
