--- a/assets/css/_sass/_nav/_new-footer.scss
+++ b/assets/css/_sass/_nav/_new-footer.scss
@@ -6,8 +6,11 @@
 	justify-content: center;
 	min-height: 40vh;
 	width: 100%;
-	padding: 1.5em;
+	padding: .35em;
 	background-color: black;
+	@media screen and (min-width: 600px) {
+		padding: 1.5em;
+	}
 }
 
 // ul
@@ -17,15 +20,17 @@
 	align-items: center;
 	width: calc(100% - 1.5em);
 	padding: 1em 0;
-	padding-left: 1em;
 	border: 4px solid $mylavender;
 	list-style-type: none;
+	@media screen and (min-width: 600px) {
+		padding-left: 1em;
+	}
+	
 }
 
 .new-footer__link-wrapper {
 	display: flex;
 	padding: 2rem 0;
-	
 }
 
 [class*="new-footer__link"] {
@@ -41,6 +46,10 @@
 	@media screen and (min-width: 1440px) {
 		font-size: 24px; // 1.5rem
 	}
+}
+
+.new-footer__link:first-of-type {
+	padding-left: 0;
 }
 
 .new-footer__link--name {
@@ -60,6 +69,12 @@
 		}
 
 	}
+	@media screen and (max-width: 374px) {
+		font-size: 1.75rem;
+	}
+	@media screen and (min-width: 600px) {
+		font-size: 2.5rem;
+	}
 }
 
 .new-footer__link {
@@ -70,5 +85,8 @@
 			color: black;
 			background-color: $mylavender;
 		}
+	}
+	@media screen and (max-width: 374px) {
+		font-size: 1.125rem;
 	}
 }
