--- a/assets/css/_sass/_layouts/_blog-post.scss
+++ b/assets/css/_sass/_layouts/_blog-post.scss
@@ -17,7 +17,8 @@
 	margin-top: 2rem;
 	margin-right: 1rem;
 	padding: 1px 8px;
-	font-family: $futura-bold;
+	font-family: $acier-bat-gris;
+	font-weight: 400;
 	font-size: 20px;
 	text-transform: uppercase;
 	color: white;
@@ -44,7 +45,7 @@
 	color: black;
 	border-bottom-width: 0px;
 	text-transform: none;
-	@media screen and (max-width: 425px) {
+	@media screen and (max-width: 600px) {
 		font-size: 2.25rem;
 	}
 	@media screen and (min-width: 1440px) {
@@ -56,8 +57,7 @@
 	margin-top: 0;
 	font-family: $source-sans;
 	font-weight: 400;
-	font-size: 20px;
-	color: $mypurple;
+	color: $mylavender;
 	span {
 		display: none;
 	}
@@ -66,6 +66,14 @@
 		span {
 			display: initial;
 		}
+	}
+	@media screen and (min-width: 425px) {
+		span {
+			display: none;
+		}
+	}
+	@media screen and (min-width: 600px) {
+		font-size: 20px;
 	}
 	@media screen and (min-width: 1440px) {
 		font-size: 24px;
@@ -88,32 +96,35 @@
 	padding: 0 8.33%;
 	max-width: calc(900px + 8.33vw);
 	font-family: $source-sans;
-	font-size: 20px;
+	font-size: 18px;
 	color: black;
 	@media screen and (min-width: 1440px) {
 		max-width: calc(1000px + 8.33vw);
 	}
 	p {
-		font-size: 20px;
+		font-size: 18px;
 		line-height: 1.4;
+		@media screen and (min-width: 600px) {
+		//	font-size: 20px;
+		}
 	}
 	a {
 		color: black;
-		border-bottom: 2px solid $mypurple;
+		border-bottom: 2px solid $mylavender;
 		transition: background-color .3s;
 		&:hover, &:focus {
 			color: black;
-			background-color: $mypurple;
+			background-color: $mylavender;
 			border-bottom-width: 0;
 		}
 	}
 	blockquote {
-		font-size: 20px;
+	//	font-size: 20px;
 		color: $medgray;
 		margin: 1em 0;
 		padding: 0 1.25em;
 		padding-left: calc(1.25em - 2px);
-		border-left: 2px solid $mypurple;
+		border-left: 2px solid $mylavender;
 		a {
 			color: $medgray;
 		}
@@ -124,7 +135,7 @@
 		list-style-type: none;
 		li {
 			position: relative;
-			font-size: 20px;
+		//	font-size: 20px;
 			&::before {
 				content: '';
 				position: absolute;
@@ -134,7 +145,7 @@
 				height: 8px;
 				width: 8px;
 				border-radius: 50%;
-				background-color: $mypurple;
+				background-color: $mylavender;
 			}
 		}
 	}
@@ -145,7 +156,7 @@
 		counter-reset: ol-counter;
 		li {
 			position: relative;
-			font-size: 20px;
+		//	font-size: 20px;
 			counter-increment: ol-counter;
 			&::before {
 				content: counter(ol-counter) ". ";
@@ -153,11 +164,11 @@
 				left: -1.5em;
 				font-family: $futura;
 				font-weight: 700;
-				color: $mypurple;
+				color: $mylavender;
 			}
 		}
 	}
-	@media screen and (max-width: 425px) {
+	@media screen and (max-width: 600px) {
 		p, ul li, ol li {
 			font-size: 18px;
 		}
