--- a/assets/css/_sass/_pages/_blog.scss
+++ b/assets/css/_sass/_pages/_blog.scss
@@ -10,7 +10,8 @@
 	margin: .25em auto;
 	margin-top: .5em;
 	font-size: 3rem;
-	font-family: $futura-bold;
+	font-family: $acier-bat-gris;
+	font-weight: 400;
 	text-align: center;
 	border-bottom-width: 0px;
 	@media screen and (min-width: 768px) {
@@ -128,8 +129,7 @@
 	margin: 0;
 	padding-left: 0;
 	list-style-type: none;
-	color: white;
-	
+	color: white;	
 }
 
 // li
@@ -139,7 +139,7 @@
 	font-family: $futura;
 	font-size: 1.25rem;
 	background-color: $mylavender;
-	@media screen and (max-width: 425px) {
+	@media screen and (max-width: 600px) {
 		font-size: 18px;
 	}
 	@media screen and (min-width: 1440px) {
@@ -188,7 +188,7 @@
 	color: white;
 	background-color: black;
 	border: 1px solid black;
-	transition: color .3s background-color .3s;
+	transition: color .3s, background-color .3s;
 	white-space: nowrap;
 	&:hover, &:focus {
 		color: black;
