Add sticky menu, correct for margin on blog

--- a/assets/css/_sass/_layouts/_default.scss
+++ b/assets/css/_sass/_layouts/_default.scss
@@ -32,3 +32,8 @@ body.default {
 		// add big-screen styles here if find need
 	}
 }
+
+.body__main-content-wrapper {
+	position: relative;
+	margin-top: 56px;
+}
