Fix double counter on ol li elements

--- a/assets/css/_sass/_layouts/_blog-post.scss
+++ b/assets/css/_sass/_layouts/_blog-post.scss
@@ -133,7 +133,7 @@
 		position: relative;
 		padding-left: 1.25em;
 		list-style-type: none;
-		li {
+		> li {
 			position: relative;
 		//	font-size: 20px;
 			&::before {
