Make titles of pages 5rem and Acier Bat Gris

--- a/assets/css/_sass/_pages/_blog.scss
+++ b/assets/css/_sass/_pages/_blog.scss
@@ -4,6 +4,7 @@
 
 .blog__title {
 	color: black;
+	margin-bottom: 2rem;
 }
 
 .blog-title__text {
@@ -19,7 +20,7 @@
 	}
 	@media screen and (min-width: 900px) {
 		margin: .25em auto;
-		font-size: 4.5rem;
+		font-size: 5rem;
 	}
 	@media screen and (min-width: 1440px) {
 		font-size: 5rem;
