--- a/assets/css/_sass/_pages/_new-about.scss
+++ b/assets/css/_sass/_pages/_new-about.scss
@@ -15,7 +15,8 @@
 .na-title__text {
 	margin: .25em auto;
 	margin-top: .5em;
-	font-family: $futura-bold;
+	font-family: $acier-bat-gris;
+	font-weight: 400;
 	font-size: 3rem;
 	text-align: center;
 	border-bottom-width: 0px;
@@ -24,7 +25,7 @@
 	}
 	@media screen and (min-width: 900px) {
 		margin: .25em auto;
-		font-size: 4.5rem;
+		font-size: 5rem;
 	}
 	@media screen and (min-width: 1440px) {
 		font-size: 5rem;
@@ -34,7 +35,7 @@
 [class*="na-title__line--"] {
 	height: 2px;
 	margin: calc(1.5rem - 1px) auto;
-	background-color: $mypurple;
+	background-color: $jet;
 	@media screen and (max-width: 425px) {
 		margin: calc(1rem - 1px) auto;
 	}
