--- a/assets/css/_sass/_pages/_new-about.scss
+++ b/assets/css/_sass/_pages/_new-about.scss
@@ -17,11 +17,14 @@
 	margin-top: .5em;
 	font-family: $acier-bat-gris;
 	font-weight: 400;
-	font-size: 3rem;
+	font-size: 3.5rem;
 	text-align: center;
 	border-bottom-width: 0px;
+	@media screen and (min-width: 600px) {
+		font-size: 3.5rem;
+	}
 	@media screen and (min-width: 768px) {
-		font-size: 4rem;
+		font-size: 4.5rem;
 	}
 	@media screen and (min-width: 900px) {
 		margin: .25em auto;
@@ -68,26 +71,36 @@
 
 .na-bio__title, .na-contact__title {
 	margin: .25em 0;
-	font-family: $futura-bold;
+	font-family: $acier-bat-gris;
+	font-weight: 400;
 	font-size: 3rem;
 	text-transform: uppercase;
-	@media screen and (max-width: 425px) {
-		font-size: 2.25rem;
+	@media screen and (min-width: 900px) {
+		font-size: 3.5rem;
 	}
 	@media screen and (min-width: 1440px) {
 		font-size: 3.5rem;
 	}
 }
 
+.na-bio__title {
+	padding-bottom: 1rem;
+	border-bottom: 2px solid $mylavender;
+}
+
+.na-contact__title {
+//	color: $mylavender;
+}
+
 .na-bio__text {
 	p {
 		font-family: $source-sans;
-		font-size: 1.25rem;
+		font-size: 1.125rem;
 		line-height: 1.4;
 	}
-	@media screen and (max-width: 425px) {
+	@media screen and (min-width: 900px) {
 		p {
-			font-size: 18px;
+			font-size: 1.25rem;
 		}
 	}
 	@media screen and (min-width: 1440px) {
@@ -101,8 +114,9 @@
 
 .na__contact {
 	width: 83.33%;
-	margin: 0 auto;
-	margin-bottom: 1.5rem;
+	margin: 3rem auto;
+	margin-top: 0; // 1.5rem;
+
 	@media screen and (max-width: 425px) {
 		width: 91.67%;
 	}
@@ -112,7 +126,8 @@
 }
 
 .na-contact__title {
-// covered above
+	padding-bottom: 1rem;
+	border-bottom: 2px solid $midbluegreen;
 }
 
 .na-contact__content {
@@ -144,7 +159,7 @@
 
 .na-contact__type {
 	width: 5.5rem;
-	font-family: $source-sans;
+	font-family: $futura;
 	font-size: 20px;
 	font-weight: bold;
 	line-height: 1.4;
@@ -159,17 +174,17 @@
 }
 
 .na-contact__user {
-	font-family: $source-sans;
+	font-family: $futura;
 	font-size: 20px;
 	line-height: 1.4;
 	a {
 		font-weight: 400;
 		color: black;
-		border-bottom: 2px solid $mypurple;
+		border-bottom: 2px solid $mylavender;
 		transition: background-color .3s;
 		&:hover, &:focus {
 			color: black;
-			background-color: $mypurple;
+			background-color: $mylavender;
 		}
 	}
 	@media screen and (max-width: 425px) {
