--- a/assets/css/_sass/_pages/_new-about.scss
+++ b/assets/css/_sass/_pages/_new-about.scss
@@ -61,6 +61,7 @@
 .na__bio {
 	width: 83.33%;
 	margin: 0 auto;
+	max-width: 1000px;
 	@media screen and (max-width: 425px) {
 		width: 91.67%;
 	}
@@ -114,6 +115,7 @@
 
 .na__contact {
 	width: 83.33%;
+	max-width: 1000px;
 	margin: 3rem auto;
 	margin-top: 0; // 1.5rem;
 
@@ -159,11 +161,11 @@
 
 .na-contact__type {
 	width: 5.5rem;
-	font-family: $futura;
+	font-family: $source-sans; // $futura;
 	font-size: 20px;
 	font-weight: bold;
 	line-height: 1.4;
-	@media screen and (max-width: 425px) {
+	@media screen and (max-width: 900px) {
 		width: 5rem;
 		font-size: 18px;
 	}
@@ -174,7 +176,7 @@
 }
 
 .na-contact__user {
-	font-family: $futura;
+	font-family: $source-sans; //  $futura;
 	font-size: 20px;
 	line-height: 1.4;
 	a {
@@ -187,7 +189,7 @@
 			background-color: $mylavender;
 		}
 	}
-	@media screen and (max-width: 425px) {
+	@media screen and (max-width: 900px) {
 		font-size: 18px;
 	}
 	@media screen and (min-width: 1440px) {
