Make logo on top menu purple by default and white when hover

--- a/_includes/new-menu.html
+++ b/_includes/new-menu.html
@@ -1,6 +1,6 @@
 <nav class="menu-wrapper">
 	<section class="menu__home-link"> <!-- turn into logo -->
-		<a href="{{ site.url}}" aria-label="Home page link" title="KD - Home">{% include logo-white.svg %}</a>
+		<a href="{{ site.url}}" aria-label="Home page link" title="KD - Home">{% include logo-lavender.svg %}</a>
 	</section>
 	<ul class="menu__page-list">
 	{% assign pages = site.pages | where: 'menu', 'true' | sort: 'order' %}
