--- a/assets/css/_sass/_nav/_new-menu.scss
+++ b/assets/css/_sass/_nav/_new-menu.scss
@@ -84,13 +84,13 @@
 .menu-list__item {
 	a {
 		margin-right: 1.5rem;
-		font-family: $futura;
+		font-family: $futura-bold;
 		font-weight: 700;
-		color: white;
+		color: $mylavender;
 		transition: color .3s background-color .3s;
 		&:hover, &:focus {
-			color: $mylavender;
-			background-color: black;
+			color: black;
+			background-color: $mylavender;
 			border-bottom-width: 0;
 		}
 	}
