--- a/assets/css/_sass/_vars/_fonts.scss
+++ b/assets/css/_sass/_vars/_fonts.scss
@@ -3,6 +3,8 @@
 // Google:
 $poppins: 'Poppins', sans-serif;
 $montserrat: 'Montserrat', sans-serif;
+$manrope: 'Manrope', sans-serif;
+$roboto: 'Roboto', sans-serif;
 
 // Adobe:
 $source-sans: source-sans-pro, sans-serif;
