--- a/assets/css/_sass/_pages/_blog.scss
+++ b/assets/css/_sass/_pages/_blog.scss
@@ -15,6 +15,7 @@
 	font-weight: 400;
 	text-align: center;
 	border-bottom-width: 0px;
+	font-size: 3.5rem;
 	@media screen and (min-width: 600px) {
 		font-size: 3.5rem;
 	}
