--- a/assets/css/_sass/_pages/_new-home-2.scss
+++ b/assets/css/_sass/_pages/_new-home-2.scss
@@ -38,7 +38,7 @@
 	justify-content: center;
 	align-items: center;
 	height: 100vh;
-	margin: 0;
+//	margin-top: 56px;
 
 }
 
@@ -50,6 +50,7 @@
 	padding: 2rem 3rem;
 	border-top: 4px solid $jet;
 	border-bottom: 4px solid $jet;
+
 	@media screen and (max-width: 500px) {
 		margin: 1rem;
 	}
@@ -65,6 +66,7 @@
 	font-weight: 400;
 	border-width: 0;
 	color: $jet;
+	white-space: nowrap;
 	@media screen and (min-width: 600px) {
 		font-size: 3rem;
 		span {
@@ -86,6 +88,7 @@
 	font-size: 2rem;
 	margin: 0;
 //	color: $mylavender;
+	white-space: nowrap;
 	@media screen and (min-width: 600px) {
 		font-size: 2.5rem;
 	}
@@ -262,8 +265,7 @@
 	justify-content: center;
 	align-items: center;
 	padding: 0 1rem;
-	background-color: $fuchsia; // $tea-rose;
-	
+	background-color: $fuchsia;
 	border-top: 4px solid $jet;
 	@media screen and (max-width: 599px) {
 		border-left: 4px solid $jet;
@@ -276,7 +278,7 @@
 }
 
 .home-blog__tech-title {
-	font-family: $futura;
+//	font-family: $futura;
 }
 
 .home-blog__tech-subhed {
@@ -290,13 +292,13 @@
 	grid-area: politics;
 	min-height: 25vh;
 	padding: 0 1rem;
-//	border: 1px solid purple;
 	display: flex;
 	flex-flow: column nowrap;
 	justify-content: center;
 	align-items: center;
 	background-color: $robinsegg; // $rose-quartz;
 	border-top: 4px solid $jet;
+
 	@media screen and (min-width: 600px) {
 		height: 50vh;
 		padding: 0 2rem;
@@ -309,6 +311,11 @@
 }
 
 .home-blog__politics-subhed {
+	@media screen and (min-width: 425px) {
+		span {
+			display: none;
+		}
+	}
 	@media screen and (max-width: 600px) {
 		margin: 0 auto;
 		text-align: center;
