Start on hamburger menu

--- a/_includes/new-menu.html
+++ b/_includes/new-menu.html
@@ -4,7 +4,7 @@
 	</section>
 
 	<section class="menu__hamburger-link">
-		<div>{% include hamburger-menu-blocky.svg %}</div>
+		{% include hamburger-menu-blocky.svg %}
 	</section>
 
 	<ul class="menu__page-list">
