--- a/_includes/new-menu.html
+++ b/_includes/new-menu.html
@@ -1,11 +1,13 @@
 <nav class="menu-wrapper">
-	<section class="menu__home-link"> <!-- turn into logo -->
-		<a href="{{ site.url}}" aria-label="Home page link" title="KD - Home">{% include logo-lavender.svg %}</a>
-	</section>
 
-	<section class="menu__hamburger-link">
-		{% include hamburger-menu-blocky.svg %}
-	</section>
+	<article class="menu__icon-wrapper">
+		<section class="menu__home-link"> <!-- turn into logo -->
+			<a href="{{ site.url}}" aria-label="Home page link" title="KD - Home">{% include logo-lavender.svg %}</a>
+		</section>
+		<section class="menu__hamburger-link">
+			{% include hamburger-menu-blocky.svg %}
+		</section>
+	</article>
 
 	<ul class="menu__page-list">
 	{% assign pages = site.pages | where: 'menu', 'true' | sort: 'order' %}
