--- a/assets/css/_sass/_nav/_new-menu.scss
+++ b/assets/css/_sass/_nav/_new-menu.scss
@@ -22,17 +22,52 @@
 		}
 	}
 }
+ 
+.menu-content-wrapper {
+	width: 100%;
+}
 
-.menu__icon-wrapper {
+/* .menu__icon-wrapper {
 	display: flex;
 	justify-content: space-between;
 	width: 100vw;
-}
+} */
 
 // Home button //
 
+.menu-wrapper li {
+	display: block;
+	transition-duration: .5s;
+}
+
+.li:hover {
+	cursor: pointer;
+}
+
+li ul li {
+	visibility: hidden;
+	opacity: 0;
+	position: absolute;
+	transition: all .5s ease;
+	left: 0;
+	display: none;
+}
+
+ul li:hover > ul,
+ul li ul:hover {
+	visibility: visible;
+	opacity: 1;
+	display: block;
+}
+
+ul li ul li {
+	clear: both;
+	width: 100%;
+}
+
 .menu__home-link {
 	position: relative;
+	left: 60px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
