--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -29,6 +29,7 @@
 @import '_nav/footer';
 @import '_nav/new-footer';
 @import '_nav/new-menu';
+@import '_nav/extra-new-menu';
 @import '_nav/nav';
 @import '_nav/new-nav';
 
