Create and incorporate new dropdown page (temporary)

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -37,6 +37,7 @@
 @import '_pages/about';
 @import '_pages/blog';
 @import '_pages/contact';
+@import '_pages/dropdown';
 @import '_pages/hire-me';
 @import '_pages/home';
 @import '_pages/intake';
