Save progress thus far in case need to revert

--- a/assets/css/_sass/_nav/_new-menu.scss
+++ b/assets/css/_sass/_nav/_new-menu.scss
@@ -35,7 +35,7 @@
 
 // Home button //
 
-.menu-wrapper li {
+/*.menu-wrapper li {
 	display: block;
 	transition-duration: .5s;
 }
@@ -64,6 +64,8 @@ ul li ul li {
 	clear: both;
 	width: 100%;
 }
+
+*/
 
 .menu__home-link {
 	position: relative;
