--- a/assets/css/_sass/_pages/_dropdown.scss
+++ b/assets/css/_sass/_pages/_dropdown.scss
@@ -1,46 +1,41 @@
-/* Dropdown Menu: */
+// CSS Tricks' solution:
 
-.menu-total-wrapper li {
+li {
 	display: block;
 	transition-duration: .5s;
-	&:hover {
-		cursor: pointer;
-	}
 }
 
-// li
-// 1 = home
-// 2 = hamburger
-.menu-item {
-	a {
-
-	}
+li:hover { 
+	cursor: pointer
 }
 
-// ul
-.menu__dropdown-wrapper {
-	li {
-		ul {
-				background: orange;
-				visibility: hidden;
-			  opacity: 0;
-			  min-width: 5rem;
-				position: absolute;
-			  transition: all 0.5s ease;
-			  margin-top: 1rem;
-				left: 0;
-			  display: none;
-		}
-		a {
-
-		}
-	}
-
+ul li ul {
+	visibility: hidden;
+	opacity: 0;
+	position: absolute;
+	transition: all .5 ease;
+	margin-top: 1rem;
+	left: 0;
+	display: none;
 }
 
-.menu__dropdown-wrapper li:hover > ul,
+ul li:hover > ul,
 ul li ul:hover {
 	visibility: visible;
 	opacity: 1;
 	display: block;
+}
+
+ul li ul li {
+	clear: both;
+	width: 100%;
+}
+
+// Tweaks I'm adding:
+
+ul {
+	display: flex;
+	justify-content: space-between;
+	margin: 0;
+	padding: 1rem 1.5rem;
 }
