--- a/assets/css/_sass/_pages/_dropdown.scss
+++ b/assets/css/_sass/_pages/_dropdown.scss
@@ -84,6 +84,28 @@ ul {
 		height: 28px;
 	}
 
+	align-items: center;
+	height: 100%;
+	a {
+		display: flex;
+		align-items: center;
+		margin-left: 1.5rem;
+		margin-right: 1.5rem;
+		font-family: $futura;
+		font-weight: 700;
+		line-height: 1;
+		color: white;
+		transition: color .3s, background-color .3s, stroke .3s, fill .3s;
+		&:hover, &:focus {
+			background-color: black;
+			border-bottom-width: 0;
+			transition: stroke .3s, fill .3s;
+			.st0 {
+					stroke: white;
+					fill: white;
+			}
+		}
+
 }
 
 .dropdown-wrapper {
@@ -107,22 +129,21 @@ ul {
 	right: 0;
 	margin-top: 24px;
 	background-color: black;
-	///transform: translateY(1rem);
-	li {
-		position: relative;
-		right: 0;
-		height: 40px;
-		display: block;
-		padding: .5rem;
-		padding-left: .5rem;
-		font-family: $futura;
-		text-align: left;
-		background-color: black;
-		transform: translateX(-1.6rem) translateY(-1rem);
-		border-top: 1px solid $medgray;
-		a {
-			color: white;
-		}
-	}
 }
 
+li.dropdown-home {
+	position: relative;
+	right: 0;
+	height: 40px;
+	display: block;
+	padding: .5rem;
+	padding-left: .5rem;
+	font-family: $futura;
+	text-align: left;
+	background-color: black;
+	transform: translateX(-1.6rem) translateY(-1rem);
+	border-top: 1px solid $medgray;
+	a {
+		color: white;
+	}
+}
