--- a/assets/css/_sass/_pages/_dropdown.scss
+++ b/assets/css/_sass/_pages/_dropdown.scss
@@ -80,6 +80,8 @@ ul {
 .dropdown-home {
 	padding: 0 .5rem;
 	background-color: black;
+	display: flex;
+	align-items: center;
 	svg {
 		height: 28px;
 	}
@@ -87,6 +89,44 @@ ul {
 	align-items: center;
 	height: 100%;
 	a {
+		display: flex;
+		align-items: center;
+		// margin-left: 1.5rem;
+		//margin-right: 1.5rem;
+		font-family: $futura;
+		font-weight: 700;
+		line-height: 1;
+		color: white;
+		transition: color .3s, background-color .3s, stroke .3s, fill .3s;
+		border: 0 solid black;
+		&:hover, &:focus {
+			background-color: black;
+			border-bottom-width: 0;
+			transition: stroke .3s, fill .3s;
+			.st0 {
+					stroke: white;
+					fill: white;
+			}
+		}
+	}
+}
+
+.dropdown-wrapper {
+	position: relative;
+	padding: 0 .5rem;
+	padding-bottom: 1rem;
+	margin-bottom: 8px;
+	min-height: 24px;
+	background-color: black;
+	a:first-of-type {
+		display: block;
+		height: 56px;
+	}
+	svg {	right: 0;
+
+		height: 28px;
+	}
+/*	a {
 		display: flex;
 		align-items: center;
 		margin-left: 1.5rem;
@@ -105,45 +145,26 @@ ul {
 					fill: white;
 			}
 		}
-
-}
-
-.dropdown-wrapper {
-	position: relative;
-	padding: 0 .5rem;
-	padding-bottom: 1rem;
-	margin-bottom: 8px;
-	min-height: 24px;
-	background-color: black;
-	a:first-of-type {
-		display: block;
-		height: 56px;
-	}
-	svg {
-		height: 28px;
-	}
+	} */
 }
 
 .dropdown {
 	position: absolute;
 	right: 0;
-	margin-top: 24px;
+//	margin-top: 24px;
 	background-color: black;
 }
 
 li.dropdown-home {
 	position: relative;
-	right: 0;
 	height: 40px;
 	display: block;
-	padding: .5rem;
-	padding-left: .5rem;
-	font-family: $futura;
-	text-align: left;
+//	padding: .5rem 0;
 	background-color: black;
-	transform: translateX(-1.6rem) translateY(-1rem);
-	border-top: 1px solid $medgray;
+//	transform: translateX(-1.6rem) translateY(-1rem);
+
 	a {
 		color: white;
+
 	}
 }
