Got new favicon worked out and got new menu on 'new home'

--- a/_layouts/new-default.html
+++ b/_layouts/new-default.html
@@ -2,7 +2,7 @@
 <html lang="en">
 {% include head.html %}
 <body>
-	{% include new-menu.html %}
+	{% include dropdown-menu.html %}
 	<main class="body__main-content-wrapper">
 	    {{ content }}
 	</main>
